<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Customer Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="addCustomer">Add Customer</string>
    <string name="listOfCustomers">List of Customers</string>
    <string name="changePassword">Change Password</string>
    <string name="title_activity_add_customer">AddCustomerActivity</string>
    <string name="title_activity_customer_list">CustomerListActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
     <string name="name">Firstname, Lastname</string>
     <string name="dateOfBirth">Date Of Birth</string>
     <string name="datePicker">Choose Date</string>
     <string name="imagePicker">Choose Image</string>
</resources>