<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btAddCustomer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/addCustomer"
        android:onClick="buttonClick" />

    <Button
        android:id="@+id/btCustomerList"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/listOfCustomers"
        android:onClick="buttonClick" />

    <Button
        android:id="@+id/btChangePass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/changePassword"
        android:onClick="buttonClick" />

</LinearLayout>